--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@
 
 body {
 	background-image: url(/img/back.jpg);
-	background-size: cover;
+	background-size: 100% cover;
+	background-repeat: no-repeat;
 	color: white;
 }
 
@@ -96,7 +97,7 @@ main {
 	top: 0;
 	left: 0;
 	background-color: rgba(0, 0, 0, 0.8);
-	color:white;
+	color: white;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
